2007-10-05  Dan Winship  <danw@gnome.org>

	* configure.in: 2.2.101

	* NEWS: update

2007-10-05  Dan Winship  <danw@gnome.org>

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_pre): Don't crash
	if the authenticate callback returns a username and no password
	(even though it's not supposed to do that). #480987

2007-09-24  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth.h (SoupAuth): add "realm" field to the struct.
	(SoupAuthClass) remove "get_realm" virtual method.

	* libsoup/soup-auth.c (soup_auth_new_from_header_list): Parse the
	WWW-Authenticate/Proxy-Authenticate header here, set realm, and
	pass the params hash to the construct method.
	(soup_auth_get_info): Return an identifier for the auth:
	"SCHEME:REALM"

	* libsoup/soup-auth-basic.c:
	* libsoup/soup-auth-digest.c: update

	* libsoup/soup-session.c (invalidate_auth, update_auth_internal):
	use soup_auth_get_info().

2007-09-24  Dan Winship  <danw@gnome.org>

	* libsoup/soup-date.c (soup_date_parse): minor rfc850-date parsing
	improvement suggested by RFC2616 19.3.

	* libsoup/soup-headers.c (soup_headers_parse_request): allow
	erroneous trailing whitespace after HTTP version. #475169

	* libsoup/soup-message-server-io.c (parse_request_headers): fix
	the parsing of the Host header to assume it already includes the
	port (which it should; the only reason this ever worked is because
	SoupUri ignores the second port number when parse_request_headers
	generates a URL like "http://localhost:9999:9999/").

	* tests/header-parsing.c (reqtests): add a test for #475169

2007-09-23  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.c (soup_message_class_init): remove a
	mysterious partial sentence in the ::wrote-chunk docstring.
	#458116

	* docs/reference/libsoup-sections.txt: Remove documentation of MD5
	methods, which are not public. #440092

2007-09-23  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.c (soup_message_set_auth)
	(soup_message_set_proxy_auth): Only remove the Authorization /